--- a/SoftRasterization/SoftRasterization.vcxproj.filters
+++ b/SoftRasterization/SoftRasterization.vcxproj.filters
@@ -66,9 +66,6 @@
     <ClInclude Include="common\vboindexer.hpp">
       <Filter>Common</Filter>
     </ClInclude>
-    <ClInclude Include="src\Color.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\Common.h">
       <Filter>Source Files</Filter>
     </ClInclude>
@@ -119,6 +116,9 @@
     </ClInclude>
     <ClInclude Include="src\Matrix2.h">
       <Filter>Source Files\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Color.h">
+      <Filter>Source Files\Other</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
